--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
-    "@types/react": "^18.2.39"
+    "@types/react": "^18.2.39",
+    "@types/recharts": "^1.8.28",
+    "framer-motion": "^10.16.9",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/react-dom": "^18.2.17"
   }
 }
